# grpc-example

./: .clang-format  .gitignore  CMakeLists.txt  License  ReadMe.md  vcpkg.json
.github/workflows/: main.yaml
src/: CMakeLists.txt  main.cpp
src/proto/: CMakeLists.txt
vcpkg/: BootstrapVcpkg.cmake
vcpkg/ports/example-port/: portfile.cmake
vcpkg/triplets/: arm64-macos-static-rel.cmake  x64-linux-static-rel.cmake  x64-windows-static-rel.cmake
